i am fixiing
